Fixes for bug#1 and bug#2: Fix dublicate toolbar buttons, fix style and wrapping behaviour of Viewer toolbar, including read mode

--- a/src/clients/common/stylesheets/components.css
+++ b/src/clients/common/stylesheets/components.css
@@ -68,6 +68,7 @@
   padding-right: 1em;
   padding-top: 0.5em;
   padding-bottom: 0.5em;
+  margin-left: 0.5em;
   margin-right: 0.5em;
 }
 
